[package]
name = "lqs"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
configparser = "3.0.2"
dirs = "5.0.1"
postgres = "0.19.5"
pad = "0.1"
surrealdb = "1.1.1"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
futures = "0.3.30"
serde_json = "1.0"
serde = { version = "1.0.195", features = ["derive"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4", "with-uuid-1"] }
chrono = "0.4.33"
uuid = "1.7.0"
